--- a/AdBlockBrowser/View/Settings/Settings.storyboard
+++ b/AdBlockBrowser/View/Settings/Settings.storyboard
@@ -35,39 +35,12 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ExceptionsCell" textLabel="qh1-En-imi" detailTextLabel="mmV-bV-pv8" style="IBUITableViewCellStyleValue1" id="uFF-S3-S4i" customClass="TableViewCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uFF-S3-S4i" id="cCb-Rd-wRK">
-                                            <rect key="frame" x="0.0" y="0.0" width="348" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Exceptions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qh1-En-imi">
-                                                    <rect key="frame" x="16" y="14" width="70.5" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Yes" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mmV-bV-pv8">
-                                                    <rect key="frame" x="317" y="14" width="23" height="17"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="0.6705882352941176" green="0.67843137254901964" blue="0.68627450980392157" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="Xfm-Gu-5Ff" kind="show" id="quL-e1-uWB"/>
-                                        </connections>
-                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection headerTitle="MORE OPTIONS" id="c3J-HF-3bq">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LanguagesCell" textLabel="cvt-sb-Yre" style="IBUITableViewCellStyleDefault" id="koX-sr-8Fy" customClass="TableViewCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="191.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="147.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="koX-sr-8Fy" id="iGc-lJ-12j">
                                             <rect key="frame" x="0.0" y="0.0" width="348" height="44"/>
@@ -87,7 +60,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TrackingCell" textLabel="XVy-Ow-KJv" style="IBUITableViewCellStyleDefault" id="xjO-3Z-QQJ" customClass="SwitchCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="235.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="191.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xjO-3Z-QQJ" id="D7Z-Ji-EBL">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -104,7 +77,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DomainsCell" textLabel="wgB-ss-LUa" style="IBUITableViewCellStyleDefault" id="Fld-qo-Obm" customClass="SwitchCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="279.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="235.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fld-qo-Obm" id="fzl-1e-cAD">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -121,7 +94,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ButtonsCell" textLabel="04J-jj-V9U" style="IBUITableViewCellStyleDefault" id="DIP-mz-cr8" customClass="SwitchCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="323.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="279.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DIP-mz-cr8" id="GWA-43-IJi">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -138,7 +111,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessagesCell" textLabel="UCJ-6S-WAS" style="IBUITableViewCellStyleDefault" id="I4z-20-bS4" customClass="SwitchCell" customModule="AdblockBrowser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="367.5" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="323.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I4z-20-bS4" id="U3l-No-gik">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -156,6 +129,9 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="MORE OPTIONS" id="TOd-XO-GnH">
+                                <cells/>
+                            </tableViewSection>
                         </sections>
                         <connections>
                             <outlet property="dataSource" destination="CqI-N1-nZz" id="ndP-dI-te3"/>
@@ -165,7 +141,6 @@
                     <navigationItem key="navigationItem" title="Ad blocking" id="w4J-92-k13" userLabel="Adblock Browser"/>
                     <connections>
                         <outlet property="adblockingLabel" destination="yym-lc-soc" id="djx-wA-PoY"/>
-                        <outlet property="exceptionsLabel" destination="qh1-En-imi" id="9uF-7D-A5r"/>
                         <outlet property="languagesLabel" destination="cvt-sb-Yre" id="fYE-bn-1pv"/>
                     </connections>
                 </tableViewController>
@@ -848,7 +823,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="AdblockBrowser.WhitelistController" automaticallyAdjustsScrollViewInsets="NO" id="Xfm-Gu-5Ff" customClass="ExceptionsViewController" customModule="AdblockBrowser" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="h0k-Fl-0F8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.95686274509803915" green="0.95294117647058818" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
